# halal_site

./: .gitignore  README.md  alembic.ini  pyproject.toml  things_to_do.txt
alembic/: env.py
alembic/versions/: 0e6c70758f5b_add_data_collection_table.py  3feb07c440e2_add_user_table.py  add_place_id_to_restaurants.py  efb1fe798eb4_add_restaurant_table.py
app/: main.py
app/auth/: utils.py
app/database/: connection.py
app/models/: __init__.py  data_collection.py  item.py  restaurant.py  user.py
app/routers/: auth.py  data_collection.py  database.py  health.py  restaurant.py
app/schemas/: auth.py  data_collection.py  restaurant.py
